# benchmarks

./: README.md
bitonic/: CMakeLists.txt  README.md  bitonic_seq.cpp
bitonic/include/: bitonic_seq.hpp  bitonic_swap.hpp  bitonic_utilities.hpp  defs.hpp
bitonic/input/: hundred.txt  ten.txt
bitonic/src/: CMakeLists.txt  bitonic_openmp.cpp  bitonic_seq.cpp  bitonic_seq2.cpp  bitonic_sort_par.cpp  bitonic_utilities.cpp  main.cpp
bitonic/testsuite/: CMakeLists.txt  test_sequential_hundred_shell.cpp  test_swap.cpp
dedup/rsrc/: Makefile  README.md  dedup  dedup.cpp  dedupdef.h  encoder.h  hashtable.h  mbuffer.h  rabin.h  sha.h  util.h
fluidanimate/inputs/: input_simmedium.tar  input_simsmall.tar
fluidanimate/src-rl/: CMakeLists.txt  COPYRIGHT  README  cellpool.cpp  cellpool.hpp  fluid.hpp  fluidcmp.cpp  fluidcmp.hpp  main.cpp  raftlib.cpp  raftlib.hpp  raftlib_src.cpp  raftlib_src.hpp
fluidanimate/src-rl/tests/: CMakeLists.txt  expected_simdev.fluid  expected_simmedium.fluid  expected_simsmall.fluid  expected_test.fluid  in_100K.fluid  in_35K.fluid  test_native.cpp  test_native_multi.cpp  test_native_multi_shell.cpp  test_native_shell.cpp  test_simdev.cpp  test_simdev_multi.cpp  test_simdev_multi_shell.cpp  test_simdev_shell.cpp  test_simlarge.cpp  test_simlarge_multi.cpp  test_simlarge_multi_shell.cpp  test_simlarge_shell.cpp  test_simmedium.cpp  test_simmedium_multi.cpp  test_simmedium_multi_shell.cpp  test_simmedium_shell.cpp  test_simsmall.cpp  test_simsmall_multi.cpp  test_simsmall_multi_shell.cpp  test_simsmall_shell.cpp  test_test.cpp  test_test_multi.cpp  test_test_multi_shell.cpp  test_test_shell.cpp
jpeg/: Makefile  Makefile_pictfromfile.x  PictureCompiler.java  README.md  ac_chrominance_bits.txt  ac_chrominance_huffvals.txt  ac_luminance_bits.txt  ac_luminance_huffvals.txt  algo1.x  algo_pictfromfile.x  dc_chrominance_bits.txt  dc_luminance_bits.txt  dc_luminance_huffvals.txt  dct_fast.tar  jpegalgo1.x  jpegalgo3.x  jpegmap1.x  jpegmap2.x  map1.x  map_tcp.x  mappings.txt  q_chrominance.txt  q_luminance.txt  sizeinfo.txt  specs.txt
jpeg/dct_fast/: Makefile  dct  dct.c  dct.h  main.c
jpeg/dct_fast/.svn/: entries
jpeg/dct_jpeg-dir/: dct_jpeg.x
jpeg/dct_jpeg-dir/.svn/: entries
jpeg/dct_jpeg-dir/.svn/text-base/: Makefile.svn-base  dct_jpeg.c.svn-base  dct_jpeg.h.svn-base
jpeg/jpeg_quantization/: Makefile  main.c  quant  quant.c  quant.h
jpeg/jpeg_zigzag/: .Makefile.swp  .main.c.swp  .zigzag.h.swp  Makefile  main.c  zigzag  zigzag.c  zigzag.h  zigzag.s
jpeg/readbmp-dir/: readbmp.h  readbmp.x
jpeg/readbmp-dir/.svn/: entries
jpeg/readbmp-dir/.svn/text-base/: Makefile.svn-base  readbmp.c.svn-base
jpeg/rgb2ycbcr-dir/: Makefile  coregen.cgp  rgb2ycbcr.c  rgb2ycbcr.h  rgb2ycbcr.vhd  rgb2ycbcr.x  rgb2ycrcb_v1_0.ngc  rgb2ycrcb_v1_0.vhd  rgb2ycrcb_v1_0.vho  rgb2ycrcb_v1_0.xco  rgb2ycrcb_v1_0_flist.txt  rgb2ycrcb_v1_0_readme.txt  rgb2ycrcb_v1_0_rgb2ycrcb_v1_0_xst_1.ngc_xst.xrpt  rgb2ycrcb_v1_0_xmdf.tcl  xlnx_auto_0.ise
jpeg/rgb2ycbcr-dir/.svn/: entries
jpeg/rgb2ycbcr-dir/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/STE/netgen/: regkeys
jpeg/rgb2ycbcr-dir/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/STE/ngcbuild/: regkeys
jpeg/rgb2ycbcr-dir/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/STE/xst/: regkeys
jpeg/rgb2ycbcr-dir/xlnx_auto_0_xdb/tmp/ise/__REGISTRY__/_ProjRepoInternal_/: regkeys
jpeg/visbmp-dir/: visbmp.c
jpeg/visbmp-dir/.svn/: entries
jpeg/visbmp-dir/.svn/text-base/: Makefile.svn-base  visbmp.h.svn-base  visbmp.x.svn-base
jpeg/visbmp-dir/java_bmpvis/: Makefile
jpeg/visbmp-dir/java_bmpvis/.svn/: entries
jpeg/visbmp-dir/java_bmpvis/bmpvis/.svn/: entries
jpeg/visbmp-dir/java_bmpvis/bmpvis/.svn/text-base/: VisFrame.java.svn-base  VisMain.java.svn-base
matrix_operations/: .main.cpp.swp  .matrix.tcc.swp  .old.cpp.swp  CMakeLists.txt  ParallelAdd.tcc  ParallelMatrixMult.tcc  check.nb  compile.sh  main.cpp  matrix.tcc  matrixop.tcc  mmult  old.cpp  randomarray.csv
matrix_operations/datasets/: answer.csv  intmatrix100_100.csv  randomarray.csv  supersmall.csv  supersmall_mult.csv
matrix_operations/include/: matrix.tcc  matrixreader.tcc
matrix_operations/src/: CMakeLists.txt  main.cpp
parallel-bzip/: README.md
parallel-bzip/pbzip2-1.1.13/: Makefile  pbzip2.cpp
parallel-bzip/rbzip2/: README.md  build.sh  rbzip2.cpp
parseclibs/: Makefile.parsec  build.sh
parseclibs/openssl-src/: pod2htmd.tmp
streamcluster/src/: Makefile  main  run.sh
streamcluster/src-rl/: CMakeLists.txt  COPYRIGHT  Makefile  README  kernels.cpp  kernels.hpp  main.cpp  streamcluster.cpp  streamcluster.hpp
streamcluster/src-rl/tests/: CMakeLists.txt  expected_simdev.txt  test_native_multi.cpp  test_native_multi_shell.cpp  test_native_shell.cpp  test_simdev.cpp  test_simdev_multi.cpp  test_simdev_multi_shell.cpp  test_simdev_shell.cpp  test_simlarge.cpp  test_simlarge_multi.cpp  test_simlarge_multi_shell.cpp  test_simlarge_shell.cpp  test_simmedium.cpp  test_simmedium_multi.cpp  test_simmedium_multi_shell.cpp  test_simmedium_shell.cpp  test_simsmall.cpp  test_simsmall_multi.cpp  test_simsmall_multi_shell.cpp  test_simsmall_shell.cpp  test_test.cpp  test_test_multi.cpp  test_test_multi_shell.cpp  test_test_shell.cpp
word_search/: README.md  compile.sh  runme.cpp  wordsearch.cpp
word_search/topo_xmls/: 10cpu.xml  15cpu.xml  16cpu.xml  2cpu.xml  4cpu.xml  6cpu.xml  8cpu.xml
word_search/utils/: runme.cpp  show_me_env.cpp
